--- a/myGame/myGame/myGame.csproj
+++ b/myGame/myGame/myGame.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Creature.cs" />
     <Compile Include="FloorPlate.cs" />
     <Compile Include="GameEnvironment.cs" />
+    <Compile Include="GameKeyboard.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
